Fix horizontal scroll. Contact with saas

--- a/_src/assets/scss/layout/_header.scss
+++ b/_src/assets/scss/layout/_header.scss
@@ -26,6 +26,7 @@
     line-height: 1.88;
     letter-spacing: normal;
     color:$snowwhite;
+    text-decoration: none;
 }
 
 .menu-options {
