--- a/_src/assets/scss/layout/_mqtablet.scss
+++ b/_src/assets/scss/layout/_mqtablet.scss
@@ -202,6 +202,32 @@
         justify-content: center;
         
     }
+    /*Contact*/
+    
+    .contact-section {
+        padding: 0 163px;
+        margin:0;
+        width:100vw;
+    }
+    
+    .paragraph-contact {
+    width:100%;
+    margin-bottom: 40px;
+    text-align: center;
+    }
+
+    /* FORM */
+    .form{
+        width:100%;
+        display: flex;
+        flex-direction: column;  
+    }
+
+    .send-button{
+        width:45%;
+        align-self: flex-end;
+    }   
+
 }
 
 
